--- a/src/css/index.css
+++ b/src/css/index.css
@@ -80,6 +80,10 @@ a {
   padding: 0 !important;
 }
 
+table tr {
+  vertical-align: middle;
+}
+
 
 .subdocuments-array {
   width: 270px !important;
